Quorum3/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignBoolObjIntObjField.quorum
class Main
    Integer v
    action Main
        v:SetValue(5)
        Test(v)
    end

    action Test(Boolean var)
    end
end
